crates/ignis_driver/tests/snapshots/e2e_err__err_null_non_pointer.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Null literal can only be used with pointer types
