crates/ignis_driver/tests/snapshots/e2e_err__err_null_ptr_diff.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Binary operator 'Subtract' cannot be applied to types 'null' and 'null'
Cannot infer pointer type for null literal
Cannot infer pointer type for null literal
