crates/ignis_driver/tests/snapshots/e2e_err__err_null_uninferred.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Cannot infer pointer type for null literal
