crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_instance_method_rhs.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
instance method access is not supported as pipe RHS
