crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_invalid_rhs_binary.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
invalid pipe RHS: binary expression is not callable
