crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_invalid_rhs_literal.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
invalid pipe RHS: literal is not callable
