crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_member_callee.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
member call as pipe RHS callee is not supported
