crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_method_bare_arity.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Function 'getValue' expects 0 arguments, got 1
