crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_method_call_arity.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Function 'add' expects 1 arguments, got 2
