crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_placeholder_arity.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
Function 'f' expects 2 arguments, got 3
