crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_placeholder_bare_rhs.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
`_` placeholder must appear inside a function call on the RHS of |>
