crates/ignis_driver/tests/snapshots/e2e_err__err_pipe_placeholder_outside_pipe.snap
---
source: crates/ignis_driver/tests/e2e_err.rs
expression: "diagnostics.join(\"\\n\")"
---
`_` placeholder is only valid inside pipe (|>) call arguments
